slight edits following re-ordering code

--- a/UseYourSpherometer.ipynb
+++ b/UseYourSpherometer.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trying to use my homemade spherometer to measure the ROC\n",
+    "# Trying my homemade spherometer to measure the ROC\n",
     "\n",
     "Of course, when I move my spherometer around over the bottom of any\n",
     "of my household bowls, the dial gauge swings around wildly. This non-constant ROC is an indication that not a single one\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
     "dial gauge placed on the surface of the sphere, one can read of the sagittal distance (i.e., conceptually \n",
     "the thickness of the slice of the watermelon). \n",
     "\n",
-    "$$h=\\texxt{ the Direct Measurement From Dial Gauge.}$$\n",
+    "$$h=\\text{ the Direct Measurement From Dial Gauge.}$$\n",
     "\n",
     "\n",
     "##  Use these four physical measurements, $a$, $b$, $c$, and $h$, to compute R\n",
@@ -476,7 +476,7 @@
     "\n",
     "\n",
     "\n",
-    "## Prove: The central angle of a given chord is twice the inscribed angle of that chord\n",
+    "## Prove: The central angle of a chord is twice the inscribed angle of that chord\n",
     "\n",
     "The central angle of a chord in a circle is defined to be the angle from the center of the circle out to each end of the chord. The inscribed angle is similarly defined to be the angle from a point on the circle back to the chord end points; however, *I believe this point must be on the part of the circle below the chord*.\n",
     "\n",
@@ -546,8 +546,8 @@
     "## Prove: The radius of a circum-circle is function of the area and the edge lengths of the circumscribed triangle\n",
     "\n",
     "\n",
-    "Consider the following figure showing a $\\triangle ABC$ with opposite edges of length $a$, $b$, and $c$ and the\n",
-    "circumscribed circle with radius of $\\rho$. \n",
+    "Consider the following figure with $\\triangle ABC$ and opposite edges of length $a$, $b$, and $c$,\n",
+    "circumscribed by the circle with radius $\\rho$. \n",
     "\n",
     "\n",
     "<figure>\n",
@@ -567,7 +567,7 @@
     "\n",
     "Construct a perpendicular bisector along the chord $AB$, at point $D$, to halve that central angle and to simultaniously halve the chord length $AB$. (N.B., perpendicular bisectors of chords pass through the center of the circle, and the formed triangles are both right triangles having an edge of length $\\frac{c}{2}$, and another of length $\\rho$, the radius of the circum-circle.\n",
     "\n",
-    "Hence, the two right $\\triangle AOD$ and $\\triangle DOB$ are equal and in particular $\\angle DOB = \\angle ACB$.\n",
+    "Hence, $\\triangle AOD$ and $\\triangle DOB$ are equal and in particular $\\angle DOB = \\angle ACB$.\n",
     "\n",
     "By the usual triangle area equation we know the area of $\\triangle ABC = \\frac{b a \\sin \\angle ACB}{2}\n",
     "= \\frac{a b \\sin \\angle ACB}{2}$.\n",
@@ -586,8 +586,9 @@
     "</figure>\n",
     "\n",
     "\n",
-    "We just showed that $\\angle ACB = \\angle DOB$. We note by inspection that $\\sin \\angle DOB = \\frac {\\frac{c}{2}}{\\rho} \n",
-    "= \\frac{c}{2 \\rho}$.\n",
+    "We just showed that $\\angle ACB = \\angle DOB$, and we note, by inspection, that \n",
+    "\n",
+    "$$\\sin \\angle DOB = \\frac {\\frac{c}{2}}{\\rho} = \\frac{c}{2 \\rho}.$$\n",
     "\n",
     "Consequenly, the area of $\\triangle ABC = \\frac{1}{2} {ab} \\frac{c}{2\\rho} = \\frac{abc}{4 \\rho}$\n",
     "\n",
@@ -1048,17 +1049,17 @@
    "source": [
     "\n",
     "\n",
-    "# Below, find the code required to draw the various figures used above.\n",
+    "# The code below will draw and save figures.\n",
     "\n",
     "\n",
-    "### There is no need to execute any of the cells below this point unless you have change the figure code.\n",
+    "### There is no need to execute the cells below unless you have changed the figure code.\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1916,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2771,7 +2772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -3687,7 +3688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -6298,7 +6299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -8016,7 +8017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
