still messing with html for github renderer
I had previously removed all the "\>" endings in the file, because I thought my other errors were causing the renderer to fail.
However, NONE of the figures would render. I have gone back and replaced that ending on JUST the "<img .... \>"

Maybe it will work. This is very frustrating.

--- a/UseYourSpherometer.ipynb
+++ b/UseYourSpherometer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
     "\n",
     "<figure>\n",
     "  <p><br>\n",
-    "  <img src=\"./img/My_Spherometer_Line_Drawing.jpg\" width=\"500\" alt=\"Spherometer Line Drawing\" >\n",
+    "  <img src=\"./img/My_Spherometer_Line_Drawing.jpg\" width=\"500\" alt=\"Spherometer Line Drawing\" />\n",
     "  <figcaption style=\"margin-top:0.5cm;\">\n",
     "         <center>A conceptual sketch of a simple spherometer above a sphere.</center>\n",
     "  </figcaption>\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -209,17 +209,17 @@
     "<hr>\n",
     "<figure>\n",
     "  <p><br>\n",
-    "  <img src=\"./img/MadisonAndMakeupMirror.jpg\" width=\"800\" alt=\"Makeup mirror\">\n",
+    "  <img src=\"./img/MadisonAndMakeupMirror.jpg\" width=\"800\" alt=\"Makeup mirror\"/>\n",
     "  <figcaption style=\"margin-top:0.75cm;\">\n",
     "         <center>Madison playing with the makeup mirror...Oh, what big eyes your have!.</center>\n",
-    "     </figcaption>\n",
+    "  </figcaption>\n",
     "</figure>\n",
     "\n",
     "<hr>\n",
     "\n",
     "<figure>\n",
     "  <p><br>\n",
-    "  <img src=\"./img/MadisonAndSpherometer.jpg\" width=\"350\" alt=\"Radius of Curvature\"> \n",
+    "  <img src=\"./img/MadisonAndSpherometer.jpg\" width=\"350\" alt=\"Radius of Curvature\"/> \n",
     "  <figcaption style=\"margin-top:0.75cm;\">\n",
     "      <center>Madison measuring the Radius of Curvature of the makeup mirror.</center>\n",
     "  </figcaption>\n",
@@ -231,7 +231,7 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"img/MadisonFindingSagittal_h.jpg\" width=\"350\" alt=\"Reading the Dial Gauge\">\n",
+    "  <img src=\"img/MadisonFindingSagittal_h.jpg\" width=\"350\" alt=\"Reading the Dial Gauge\"/>\n",
     "  <figcaption style=\"margin-top:0.75cm;\">\n",
     "    <center>Reading the dial-gauge to determine the saggital depth, h.</center>\n",
     "     </figcaption>\n",
@@ -243,7 +243,7 @@
     "\n",
     "<figure>\n",
     "  <br><br><br>\n",
-    "  <img src=\"img/EstimatingFocusWithSun.jpg\" width=\"800\" alt=\"focusing the sun\">\n",
+    "  <img src=\"img/EstimatingFocusWithSun.jpg\" width=\"800\" alt=\"focusing the sun\"/>\n",
     "  <figcaption  style=\"margin-top:0.75cm;\">\n",
     "     <center>Measuring the distance from the mirror to the focused image of the sun to estimate $F=R/2$.</center>\n",
     "  </figcaption>\n",
@@ -265,11 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R= 4.525301435739641\n",
+      "rho= 1.6486408017000114\n"
+     ]
+    }
+   ],
    "source": [
     "#Measurements of a small makeup mirror\n",
     "#a,b, and c are the distances between the touching points of the legs of my spherometer\n",
@@ -337,7 +344,7 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"img/spherical_melon_uncut.jpg\" width=\"400\" alt=\"Picture 21\" title=\"Picture 1\">\n",
+    "  <img src=\"img/spherical_melon_uncut.jpg\" width=\"400\" alt=\"Watermelon\"/>\n",
     "  <figcaption>\n",
     "      <center>Figure 1.  A more or less spherical watermelon.</center>\n",
     "  </figcaption>\n",
@@ -347,7 +354,7 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"img/Sliced_melon.jpg\" width=\"400\" alt=\"Picture 21\" title=\"Picture 1\" >\n",
+    "  <img src=\"img/Sliced_melon.jpg\" width=\"400\" alt=\"SlicedMelon\"/>\n",
     "  <figcaption>\n",
     "      <center>Figure 2.  Melon after a single (sagittal) slice.</center>\n",
     "  </figcaption>\n",
@@ -366,7 +373,7 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"img/h_forMelonSaggitalSlice.jpg\" width=\"400\" alt=\"Picture 21\" title=\"Picture 2\" >\n",
+    "  <img src=\"img/h_forMelonSaggitalSlice.jpg\" width=\"400\" alt=\"MellonSagitalSlice\" />\n",
     "  <figcaption>\n",
     "     <center>\n",
     "           Figure 3.  Sagittal slice thickness would actually be measured by the dial guage of the spherometer; the melon offers a simpler measurement.\n",
@@ -388,7 +395,7 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"./img/SphericalMelon_sagitalSliceW3points.jpg\" width=\"400\" alt=\"Pins where spherometer legs would be.\">\n",
+    "  <img src=\"./img/SphericalMelon_sagitalSliceW3points.jpg\" width=\"400\" alt=\"Pins where spherometer legs would be.\"/>\n",
     "  <figcaption>\n",
     "     <center>\n",
     "        Figure 4a.  Pins marking points where the spherometer legs defined the sagittal slice plane.\n",
@@ -399,7 +406,7 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"img/measuringLegDistancesOfSpherometer.jpg\" width=\"400\" alt=\"Distance between pins.\">\n",
+    "  <img src=\"img/measuringLegDistancesOfSpherometer.jpg\" width=\"400\" alt=\"Distance between pins.\"/>\n",
     "  <figcaption>\n",
     "     <center>\n",
     "           Figure 4b. Measuring the distance between the same three points defining the sagittal plane; here also showing the rest of the sphere.\n",
@@ -427,7 +434,7 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"img/2xRhoANDassociatedGreatCircle.jpg\" width=\"400\" alt=\"sagittal section radius and great circle.\">\n",
+    "  <img src=\"img/2xRhoANDassociatedGreatCircle.jpg\" width=\"400\" alt=\"sagittal section radius and great circle.\"/>\n",
     "  <figcaption>\n",
     "     <center>\n",
     "          Figure 5. Knowing a sagittal radius, recognize it defines a Great Circle through $F$ and $G$ (red and blue pins),\n",
@@ -545,7 +552,7 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"./img/CentralAngleTheorem_Case_1.jpg\" width=\"600\" alt=\"CentralAngleTheorem_Case_3\">\n",
+    "  <img src=\"./img/CentralAngleTheorem_Case_1.jpg\" width=\"600\" alt=\"CentralAngleTheorem_Case_3\"/>\n",
     "  <figcaption>\n",
     "     <center>The central angle of the chord lies on a diameter made by the inscribed angle $ADB$.</center>\n",
     "  </figcaption>\n",
@@ -570,7 +577,7 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"./img/CentralAngleTheorem_Case_2.jpg\" width=\"600\" alt=\"CentralAngleTheorem_Case_2\">\n",
+    "  <img src=\"./img/CentralAngleTheorem_Case_2.jpg\" width=\"600\" alt=\"CentralAngleTheorem_Case_2\"/>\n",
     "  <figcaption>\n",
     "     <center>The central angle of the chord is totally within the inscribed angle $ADB$.</center>\n",
     "  </figcaption>\n",
@@ -594,7 +601,7 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"./img/CentralAngleTheorem_Case_3.jpg\" width=\"600\" alt=\"CentralAngleTheorem_Case_3\">\n",
+    "  <img src=\"./img/CentralAngleTheorem_Case_3.jpg\" width=\"600\" alt=\"CentralAngleTheorem_Case_3\"/>\n",
     "  <figcaption>\n",
     "     <center>The center of the circle is totally outside the inscribe angle.</center>\n",
     "  </figcaption>\n",
@@ -623,7 +630,7 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"./img/IntersectingChordTheorem.jpg\" width=\"650\" alt=\"Intersecting Chords\">\n",
+    "  <img src=\"./img/IntersectingChordTheorem.jpg\" width=\"650\" alt=\"Intersecting Chords\"/>\n",
     "  <figcaption>\n",
     "     <center>\n",
     "        The Intersectiong Chord Theorem shows the product of a chord's parts is the same for either chord.\n",
@@ -662,11 +669,11 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"./img/AreaByTrig.jpg\" width=\"600\" alt=\"Area of triangle by trig.\">\n",
-    "     <figcaption>\n",
-    "         <center>The area of the triangle by Triginometry and the relationship to the radius $\\rho$.</center>\n",
-    "     </figcaption>\n",
-    "     <br>\n",
+    "  <img src=\"./img/AreaByTrig.jpg\" width=\"600\" alt=\"Area of triangle by trig.\"/>\n",
+    "  <figcaption>\n",
+    "     <center>The area of the triangle by Triginometry and the relationship to the radius $\\rho$.</center>\n",
+    "  </figcaption>\n",
+    "  <br>\n",
     "</figure>\n",
     "\n",
     "\n",
@@ -698,7 +705,7 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"./img/AreaOfTriangleByHeron.jpg\" width=\"600\" alt=\"Using Area by Heron\">\n",
+    "  <img src=\"./img/AreaOfTriangleByHeron.jpg\" width=\"600\" alt=\"Using Area by Heron\"/>\n",
     "  <figcaption>\n",
     "     <center>\n",
     "       By using Heron's formula, we find the circle's radius, $\\rho$, as a function of the edge lengths.\n",
@@ -739,7 +746,7 @@
     "<figure>\n",
     "  <br>\n",
     "  <img src=\"./img/SagittalAndPerpendicularDiameter.jpg\" width=\"600\" \n",
-    "       alt=\"Sagital Chord intersecting perpendicular diameter\">\n",
+    "       alt=\"Sagital Chord intersecting perpendicular diameter\"/>\n",
     "  <figcaption style=\"margin-top:0.5cm;\">\n",
     "     <center>Case 1: Sagittal chord of length $2\\rho$ intersecting a perpendicular diameter of lenght $2R$.</center>\n",
     "  </figcaption>\n",
@@ -839,14 +846,13 @@
     "\n",
     "<figure>\n",
     "  <br>\n",
-    "  <img src=\"./img/LawOfCosines.jpg\" width=\"600\" alt=\"Law of Cosines\" \n",
-    "      title=\"The Law of Cosines.\" >\n",
-    "     <figcaption>\n",
-    "         <center>\n",
-    "            The relationship between an opposite edge and $\\cos$ of the between adjacent edges, by Analytic Geometry.\n",
-    "         </center>\n",
-    "     </figcaption>\n",
-    "     <br>\n",
+    "  <img src=\"./img/LawOfCosines.jpg\" width=\"600\" alt=\"Law of Cosines\"/>\n",
+    "  <figcaption>\n",
+    "     <center>\n",
+    "        The relationship between an opposite edge and $\\cos$ of the between adjacent edges, by Analytic Geometry.\n",
+    "     </center>\n",
+    "  </figcaption>\n",
+    "  <br>\n",
     "</figure>\n",
     "\n",
     "\n",
