--- a/UseYourSpherometer.ipynb
+++ b/UseYourSpherometer.ipynb
@@ -53,14 +53,14 @@
     "Using just the measured distances between legs of the spherometer and this sagittal height, it is possible to determine\n",
     "the radius, $R$, of the measured sphere (or the local radius of curvature, ROC, for a non-spherical surface.\n",
     "\n",
-    "<figure>\n",
-    "  <p><br>\n",
+    "<figure />\n",
+    "  <p /><br />\n",
     "  <img src=\"./img/My_Spherometer_Line_Drawing.jpg\" width=\"500\" alt=\"Spherometer Line Drawing\" />\n",
-    "  <figcaption style=\"margin-top:0.5cm;\">\n",
-    "         <center>A conceptual sketch of a simple spherometer above a sphere.</center>\n",
-    "  </figcaption>\n",
-    "  <br>\n",
-    "</figure>\n",
+    "  <figcaption style=\"margin-top:0.5cm;\" />\n",
+    "         <center />A conceptual sketch of a simple spherometer above a sphere.</center />\n",
+    "  </figcaption />\n",
+    "  <br />\n",
+    "</figure />\n",
     "\n",
     "\n",
     "Visit __[ for a nicer picture and a better description](https://www.daviddarling.info/encyclopedia/S/spherometer.html)__.\n",
