render problems continue
I'm not quite sure what is going on. 
If i add /> to just the image line, github won't render the figure
if i add /> to all closing tags, then github WILL render but will ALSO  append the html  until the figure close line.

Here, I'm trying \> everywhere except on those final lines.   I wonder if it needs the caption in quotes?

--- a/UseYourSpherometer.ipynb
+++ b/UseYourSpherometer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -57,10 +57,10 @@
     "  <p /><br />\n",
     "  <img src=\"./img/My_Spherometer_Line_Drawing.jpg\" width=\"500\" alt=\"Spherometer Line Drawing\" />\n",
     "  <figcaption style=\"margin-top:0.5cm;\" />\n",
-    "         <center />A conceptual sketch of a simple spherometer above a sphere.</center />\n",
-    "  </figcaption />\n",
-    "  <br />\n",
-    "</figure />\n",
+    "         <center>A conceptual sketch of a simple spherometer above a sphere.</center>\n",
+    "  </figcaption>\n",
+    "  <br >\n",
+    "</figure>\n",
     "\n",
     "\n",
     "Visit __[ for a nicer picture and a better description](https://www.daviddarling.info/encyclopedia/S/spherometer.html)__.\n",
