--- a/UseYourSpherometer.ipynb
+++ b/UseYourSpherometer.ipynb
@@ -56,11 +56,13 @@
     "<figure />\n",
     "  <p /><br />\n",
     "  <img src=\"./img/My_Spherometer_Line_Drawing.jpg\" width=\"500\" alt=\"Spherometer Line Drawing\" />\n",
-    "  <figcaption style=\"margin-top:0.5cm;\" />\n",
-    "         <center>A conceptual sketch of a simple spherometer above a sphere.</center>\n",
-    "  </figcaption>\n",
-    "  <br >\n",
-    "</figure>\n",
+    "  <center />\n",
+    "    <figcaption style=\"margin-top:0.5cm;\" />\n",
+    "         A conceptual sketch of a simple spherometer above a sphere.\n",
+    "     </figcaption/>\n",
+    "  </center />\n",
+    "  <br />\n",
+    "</figure />\n",
     "\n",
     "\n",
     "Visit __[ for a nicer picture and a better description](https://www.daviddarling.info/encyclopedia/S/spherometer.html)__.\n",
