--- a/UseYourSpherometer.ipynb
+++ b/UseYourSpherometer.ipynb
@@ -59,10 +59,10 @@
     "  <center />\n",
     "    <figcaption style=\"margin-top:0.5cm;\" />\n",
     "         A conceptual sketch of a simple spherometer above a sphere.\n",
-    "     </figcaption/>\n",
-    "  </center />\n",
+    "     </figcaption >\n",
+    "  </center >\n",
     "  <br />\n",
-    "</figure />\n",
+    "</figure >\n",
     "\n",
     "\n",
     "Visit __[ for a nicer picture and a better description](https://www.daviddarling.info/encyclopedia/S/spherometer.html)__.\n",
