--- a/UseYourSpherometer.ipynb
+++ b/UseYourSpherometer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
     "  <center />\n",
     "    <figcaption style=\"margin-top:0.5cm;\" />\n",
     "         A conceptual sketch of a simple spherometer above a sphere.\n",
-    "     </figcaption >\n",
+    "     </figcaption />\n",
     "  </center >\n",
     "  <br />\n",
     "</figure >\n",
