Trying to align images and text with yet another option
Trying the following
<p style="text-align:center;" />
    <img src="./img/My_Spherometer_Line_Drawing.jpg" width="500" alt="Spherometer Line Drawing" />
    <b>A conceptual sketch of a simple spherometer above a sphere.</b>
  </p>

--- a/UseYourSpherometer.ipynb
+++ b/UseYourSpherometer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -53,16 +53,11 @@
     "Using just the measured distances between legs of the spherometer and this sagittal height, it is possible to determine\n",
     "the radius, $R$, of the measured sphere (or the local radius of curvature, ROC, for a non-spherical surface.\n",
     "\n",
-    "<figure />\n",
-    "  <p /><br />\n",
-    "  <img src=\"./img/My_Spherometer_Line_Drawing.jpg\" width=\"500\" alt=\"Spherometer Line Drawing\" />\n",
-    "  <center />\n",
-    "    <figcaption style=\"margin-top:0.5cm;\" />\n",
-    "         A conceptual sketch of a simple spherometer above a sphere.\n",
-    "     </figcaption />\n",
-    "  </center >\n",
-    "  <br />\n",
-    "</figure >\n",
+    "\n",
+    " <p style=\"text-align:center;\" />\n",
+    "    <img src=\"./img/My_Spherometer_Line_Drawing.jpg\" width=\"500\" alt=\"Spherometer Line Drawing\" />\n",
+    "    <b>A conceptual sketch of a simple spherometer above a sphere.</b>\n",
+    "  </p>\n",
     "\n",
     "\n",
     "Visit __[ for a nicer picture and a better description](https://www.daviddarling.info/encyclopedia/S/spherometer.html)__.\n",
