github renderer has problems
I give up. The figures and captions do just fine on my Jupyter Notebook. Nothing I've tried has been able to fix them as rendered by github.
**If you are reading these files from github, they will have artifacts around the images.

--- a/UseYourSpherometer.ipynb
+++ b/UseYourSpherometer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -29,6 +29,11 @@
    "source": [
     "# Using My DIY Spherometer with Telescope Mirrors\n",
     "\n",
+    "**NOTICE: <---------------- For some reason, github.com cannot render the images with titles\n",
+    "I've tried a bunch of work-arounds, but none of them work to date (8/14/2018). \n",
+    "SO, IF YOU ARE READING THIS FILE DIRECTLY FROM THE GITHUB, WITH THEIR RENDERER, THE CAPTIONS HAVE ARTIFACTS.**\n",
+    "\n",
+    "**HOWEVER, my downloaded versions show up just fine.**\n",
     "\n",
     "## What is a spherometer and why would you use it? ##\n",
     "\n",
@@ -58,6 +63,7 @@
     "    <img src=\"./img/My_Spherometer_Line_Drawing.jpg\" width=\"500\" alt=\"Spherometer Line Drawing\" />\n",
     "    <b>A conceptual sketch of a simple spherometer above a sphere.</b>\n",
     "  </p>\n",
+    "\n",
     "\n",
     "\n",
     "Visit __[ for a nicer picture and a better description](https://www.daviddarling.info/encyclopedia/S/spherometer.html)__.\n",
