Corrected a few sign errors in Heron proof

--- a/UseYourSpherometer.ipynb
+++ b/UseYourSpherometer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -959,7 +959,7 @@
     "\n",
     "Show that $$\\frac{(2(b^2c^2 + c^2a^2 + a^2b^2)-(a^4 + b^4+c^4)}{\\mathbf {16}} = \\frac{(2ab)^2 - (a^2 + b^2 - c^2)^2}{\\mathbf{16}} $$\n",
     "\n",
-    "**Equivalently, show that**  $$\\mathbf{(2(a^2b^2 + a^2ac^2 + b^2c^2)-(a^4 + b^4+c^4) = (2ab)^2 - (a^2 + b^2 - c^2)^2} $$\n",
+    "**Equivalently, show that**  $$\\mathbf{(2(a^2b^2 + a^2c^2 + b^2c^2)-(a^4 + b^4+c^4) = (2ab)^2 - (a^2 + b^2 - c^2)^2} $$\n",
     "\n",
     "rewriting, from the right hand side of the equality, the difference of squares\n",
     "\n",
@@ -1010,7 +1010,7 @@
     "\n",
     "**So, that we have derived the desired equality:**\n",
     "\n",
-    "$$\\mathbf{(2ab)^2 - (a^2 + b^2 - c^2)^2 =  2(a^2b^2 + a^2c^2 +b^2c^2) - (a^4 - b^4 - c^4)}$$\n",
+    "$$\\mathbf{(2ab)^2 - (a^2 + b^2 + c^2)^2 =  2(a^2b^2 + a^2c^2 +b^2c^2) - (a^4 - b^4 - c^4)}$$\n",
     "\n",
     "\n",
     "\n",
@@ -1020,7 +1020,7 @@
     "\n",
     "**Show that with** $\\mathbf{s=(a+b+c)/2}$:\n",
     "\n",
-    "$$\\mathbf{ \\frac{(2ab)^2 - (a^2 + b^2 - c^2)^2}{16}  = s(s-a)(s-b)(s-c)}$$\n",
+    "$$\\mathbf{ \\frac{(2ab)^2 - (a^2 + b^2 + c^2)^2}{16}  = s(s-a)(s-b)(s-c)}$$\n",
     "\n",
     "We begin by substituting for $s$ on the right hand side of the equality, and then expand the four-term product.\n",
     "\n",
